Fixed user icon opacity and added prevention of fixing the navigation bar if the window is too small.

--- a/public_html/media/css/style.css
+++ b/public_html/media/css/style.css
@@ -105,7 +105,7 @@
 }
 
 .icon-user {
-	opacity: 1;
+	opacity: 1 !important;
 }
 
 .icon-notif {
